--- a/Rapport/papier1/christophe.bib
+++ b/Rapport/papier1/christophe.bib
@@ -1,62 +1,39 @@
-@phdthesis{Acher2011,
-author = {Acher, M},
-booktitle = {Sophia},
-school = {Nice-Sophia Antipolis},
-title = {{Managing Multiple Feature Models : Foundations , Language and Applications}},
-year = {2011}
+@inproceedings{Bouzeghoub2005,
+  author    = {Mokrane Bouzeghoub and
+               Dimitre Kostadinov},
+  title     = {Personnalisation de l'information: aper\c{c}u de l'{\'e}tat
+               de l'art et d{\'e}finition d'un mod{\`e}le flexible
+               de profils},
+  booktitle = {CORIA},
+  year      = {2005},
+  pages     = {201-218},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
-@book{Anderruthy2007,
-abstract = {Internet a \'{e}t\'{e} une r\'{e}volution plan\'{e}taire qui a profond\'{e}ment chang\'{e} nos habitudes de pens\'{e}e et de communication. Ces deux derni\`{e}res ann\'{e}es ont \'{e}t\'{e} marqu\'{e}es par l'apparition de nouvelles technologies et pratiques comme les Weblogs, les Wlkis et le Podcastlng. Ces nouveaux formats constituaient la partie la plus visible du Web 2.0 mais ils connaissent depuis quelques temps de nombreux prolongements. Ces r\'{e}cents services pr\'{e}sentent les caract\'{e}ristiques suivantes : - l'utilisation de plate-forme de programmation permettant une compl\`{e}te interactivit\'{e} avec l'internaute (Ajax) ; - l'interop\'{e}rabilit\'{e} des applications et des m\'{e}thodes utilis\'{e}es (flux RSS, APIS) ; - le d\'{e}veloppement des r\'{e}seaux sociaux favorisant une gestion d\'{e}centralis\'{e}e de l'information et qui font de l'internaute un acteur \`{a} part enti\`{e}re de sa pratique de l'Internet (Social Bookmarking, Tagging) ; - l'externalisation qui permet de remplacer les applications install\'{e}es localement et qui induit une pratique nomade du Web. Nous allons donc expliquer comment utiliser les applications phare de cette nouvelle constellation. Nous commencerons par vous pr\'{e}senter les espaces applicatifs (\'{e}diteur de texte, tableur en ligne), les espaces r\'{e}serv\'{e}s aux professionnels (projet collaboratif, chat d'entreprise, base de donn\'{e}es en ligne), les espaces personnels (page personnalis\'{e}e avec Netvlbes, agenda en ligne avec Voo2do, bureau virtuel avec Goowy, stockage de donn\'{e}es avec box.net) ; la partie 4 concernera les espaces ludiques (diffusion de podcast, partage d'album photo, diffusion de ses vid\'{e}os); la partie 5, les espaces collaboratifs (gestion des favoris, des tags...) ; la partie 6 abordera les flux RSS (agr\'{e}gateur de flux, cr\'{e}ation d'un syst\`{e}me d'informations avec xFruits, blogroll personnalis\'{e}). La derni\`{e}re partie d\'{e}taillera les outils utiles aux blogs (bookmarker, gestion des trackbacks, widget...) et les mashups. Au final, il sera propos\'{e} au lecteur de rejoindre ce que nous pouvons dors et d\'{e}j\`{a} appeler, une r\'{e}volution dans la r\'{e}volution.},
-author = {Anderruthy, Jean-No\"{e}l},
-isbn = {2746034972},
-pages = {326},
-title = {{Web 2.0: (r)\'{e}volutions et nouveaux services d'Internet}},
-url = {http://books.google.com/books?hl=fr\&lr=\&id=JCNbJVptZu4C\&pgis=1},
-year = {2007}
+
+@inproceedings{Floyd2007,
+  author    = {Ingbert R. Floyd and
+               M. Cameron Jones and
+               Dinesh Rathi and
+               Michael B. Twidale},
+  title     = {Web Mash-ups and Patchwork Prototyping: User-driven technological
+               innovation with Web 2.0 and Open Source Software},
+  booktitle = {HICSS},
+  year      = {2007},
+  pages     = {86},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/HICSS.2007.612},
+  crossref  = {DBLP:conf/hicss/2007},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
-@article{Bouzeghoub2005,
-author = {Bouzeghoub, Mokrane and Kostadinov, Dimitre and Others},
-file = {:home/descl/Downloads/Personnalisation de l information etat de l art et definition d un modele de profils\_Bouzeghoub, Kostadinov.pdf:pdf},
-journal = {Memorias de CORIA},
-pages = {201},
-title = {{Personnalisation de l'information: aper\c{c}u de l'\'{e}tat de l'art et d\'{e}finition d'un mod\`{e}le flexible de profils}},
-url = {http://apmd.prism.uvsq.fr/public/Publications/Articles/Personnalisation de l information etat de l art et definition d un modele de profils\_Bouzeghoub, Kostadinov.pdf},
-year = {2005}
+@proceedings{DBLP:conf/hicss/2007,
+  title     = {40th Hawaii International International Conference on Systems
+               Science (HICSS-40 2007), CD-ROM / Abstracts Proceedings,
+               3-6 January 2007,  Waikoloa, Big Island, HI, USA},
+  booktitle = {HICSS},
+  publisher = {IEEE Computer Society},
+  year      = {2007},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
-@inproceedings{Bross2010,
-abstract = {The massive adoption of social media has provided new ways for individuals to express their opinions online. The blogosphere, an inherent part of this trend, contains a vast array of information about a variety of topics. It is thus a huge think tank that creates an enormous and ever-changing archive of open source intelligence. Modeling and mining this vast pool of data to extract, exploit and describe meaningful knowledge in order to leverage (content-related) structures and dynamics of emerging networks within the blogosphere is the higher-level aim of the research presented here. This paper focuses on this project's initial phase, in which the above-mentioned data of interest needs to be collected and made available offline for further analyses. Our proprietary development of a tailor-made feed-crawler meets exactly this need. The main concept, the techniques and the implementation details of the crawler thus form the main interest of this paper and furthermore provide the basis for future project phases.},
-author = {Bross, Justus and Quasthoff, Matthias and Berger, Philipp and Hennig, Patrick and Meinel, Christoph},
-booktitle = {2010 24th IEEE International Conference on Advanced Information Networking and Applications},
-doi = {10.1109/AINA.2010.95},
-isbn = {978-1-4244-6695-5},
-pages = {453--460},
-publisher = {IEEE},
-title = {{Mapping the Blogosphere with RSS-Feeds}},
-url = {http://ieeexplore.ieee.org/xpl/freeabs\_all.jsp?arnumber=5474737},
-year = {2010}
-}
-@misc{Christophe,
-author = {Christophe, Desclaux},
-title = {{ZeOntologyNewsExtractor}},
-url = {http://zone.zouig.org}
-}
-@article{Floyd2007,
-author = {Floyd, Ingbert R and Jones, M Cameron and Rathi, Dinesh and Twidale, Michael B and Science, Information},
-file = {:home/descl/Downloads/04076545.pdf:pdf},
-journal = {Source},
-pages = {1--10},
-title = {{Web Mash-ups and Patchwork Prototyping: User-driven technological innovation with Web 2.0 and Open Source Software}},
-year = {2007}
-}
-@article{Lee2001,
-author = {Lee, TB and Hendler, J and Lassila, O},
-file = {:home/descl/Downloads/scientific-american.pdf:pdf},
-journal = {Scientific American},
-keywords = {agent through the semantic,and,from mom,in a few minutes,indicate terms whose semantics,it,or meaning,pete didn,s place,t like,the agent presented them,the way across town,university hospital was all,web,were defined for the,with a plan},
-title = {{The semantic web}},
-url = {http://kill.devc.at/system/files/scientific-american.pdf},
-year = {2001}
-}
+
 @article{Milanovic2004,
 abstract = {Web service composition lets developers create applications on top of service-oriented computing's native description, discovery, and communication capabilities. Such applications are rapidly deployable and offer developers reuse possibilities and users seamless access to a variety of complex services. There are many existing approaches to service composition, ranging from abstract methods to those aiming to be industry standards. The authors describe four key issues for Web service composition.},
 author = {Milanovic, N. and Malek, M.},
@@ -71,19 +48,36 @@ url = {http://ieeexplore.ieee.org/xpl/freeabs\_all.jsp?arnumber=1355922},
 volume = {8},
 year = {2004}
 }
-@misc{MetaMap,
-author = {{National Library of Medicine}},
-title = {{MetaMap}},
-url = {http://metamap.nlm.nih.gov/}
+
+@book{Anderruthy2007,
+abstract = {Internet a \'{e}t\'{e} une r\'{e}volution plan\'{e}taire qui a profond\'{e}ment chang\'{e} nos habitudes de pens\'{e}e et de communication. Ces deux derni\`{e}res ann\'{e}es ont \'{e}t\'{e} marqu\'{e}es par l'apparition de nouvelles technologies et pratiques comme les Weblogs, les Wlkis et le Podcastlng. Ces nouveaux formats constituaient la partie la plus visible du Web 2.0 mais ils connaissent depuis quelques temps de nombreux prolongements. Ces r\'{e}cents services pr\'{e}sentent les caract\'{e}ristiques suivantes : - l'utilisation de plate-forme de programmation permettant une compl\`{e}te interactivit\'{e} avec l'internaute (Ajax) ; - l'interop\'{e}rabilit\'{e} des applications et des m\'{e}thodes utilis\'{e}es (flux RSS, APIS) ; - le d\'{e}veloppement des r\'{e}seaux sociaux favorisant une gestion d\'{e}centralis\'{e}e de l'information et qui font de l'internaute un acteur \`{a} part enti\`{e}re de sa pratique de l'Internet (Social Bookmarking, Tagging) ; - l'externalisation qui permet de remplacer les applications install\'{e}es localement et qui induit une pratique nomade du Web. Nous allons donc expliquer comment utiliser les applications phare de cette nouvelle constellation. Nous commencerons par vous pr\'{e}senter les espaces applicatifs (\'{e}diteur de texte, tableur en ligne), les espaces r\'{e}serv\'{e}s aux professionnels (projet collaboratif, chat d'entreprise, base de donn\'{e}es en ligne), les espaces personnels (page personnalis\'{e}e avec Netvlbes, agenda en ligne avec Voo2do, bureau virtuel avec Goowy, stockage de donn\'{e}es avec box.net) ; la partie 4 concernera les espaces ludiques (diffusion de podcast, partage d'album photo, diffusion de ses vid\'{e}os); la partie 5, les espaces collaboratifs (gestion des favoris, des tags...) ; la partie 6 abordera les flux RSS (agr\'{e}gateur de flux, cr\'{e}ation d'un syst\`{e}me d'informations avec xFruits, blogroll personnalis\'{e}). La derni\`{e}re partie d\'{e}taillera les outils utiles aux blogs (bookmarker, gestion des trackbacks, widget...) et les mashups. Au final, il sera propos\'{e} au lecteur de rejoindre ce que nous pouvons dors et d\'{e}j\`{a} appeler, une r\'{e}volution dans la r\'{e}volution.},
+author = {Anderruthy, Jean-No\"{e}l},
+isbn = {2746034972},
+pages = {326},
+title = {{Web 2.0: (r)\'{e}volutions et nouveaux services d'Internet}},
+url = {http://books.google.com/books?hl=fr\&lr=\&id=JCNbJVptZu4C\&pgis=1},
+year = {2007}
 }
-@techreport{Lassila,
-author = {Lassila, Orla and Ralph, Swick},
-title = {{Resource Description Framework (RDF) Model and Syntax Specification, W3C Recommendation 22 February 1999}}
+
+@inproceedings{Bross2010,
+abstract = {The massive adoption of social media has provided new ways for individuals to express their opinions online. The blogosphere, an inherent part of this trend, contains a vast array of information about a variety of topics. It is thus a huge think tank that creates an enormous and ever-changing archive of open source intelligence. Modeling and mining this vast pool of data to extract, exploit and describe meaningful knowledge in order to leverage (content-related) structures and dynamics of emerging networks within the blogosphere is the higher-level aim of the research presented here. This paper focuses on this project's initial phase, in which the above-mentioned data of interest needs to be collected and made available offline for further analyses. Our proprietary development of a tailor-made feed-crawler meets exactly this need. The main concept, the techniques and the implementation details of the crawler thus form the main interest of this paper and furthermore provide the basis for future project phases.},
+author = {Bross, Justus and Quasthoff, Matthias and Berger, Philipp and Hennig, Patrick and Meinel, Christoph},
+booktitle = {2010 24th IEEE International Conference on Advanced Information Networking and Applications},
+doi = {10.1109/AINA.2010.95},
+isbn = {978-1-4244-6695-5},
+pages = {453--460},
+publisher = {IEEE},
+title = {{Mapping the Blogosphere with RSS-Feeds}},
+url = {http://ieeexplore.ieee.org/xpl/freeabs\_all.jsp?arnumber=5474737},
+year = {2010}
 }
-@misc{Winer2005,
-author = {Winer, D},
-file = {:home/descl/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Unknown - Unknown - RSS 2.0 Specification (RSS 2.0 at Harvard Law).html:html},
-title = {{RSS 2.0 Specification (RSS 2.0 at Harvard Law)}},
-url = {http://cyber.law.harvard.edu/rss/rss.html},
-year = {2005}
+
+
+
+@phdthesis{Acher2011,
+author = {Acher, Mathieu},
+booktitle = {Sophia},
+school = {Universit\'{e} Nice Sophia-Antipolis},
+title = {{Managing Multiple Feature Models : Foundations , Language and Applications}},
+year = {2011}
 }
